# HttpClient

./: CLAUDE.md  Cargo.toml  README.md
examples/: basic_get.rs  post_form.rs  post_string.rs
src/: cancellation.rs  client.rs  error.rs  headers.rs  lib.rs  media_type.rs  method.rs  request.rs  response.rs  uri.rs  version.rs
src/content/: byte_array.rs  form.rs  mod.rs  multipart.rs  stream.rs  string.rs
src/handlers/: execute.rs  handler.rs  mod.rs  sockets.rs
src/transport/: h1.rs  mod.rs  pool.rs  tls.rs
tests/: integration.rs
tests/support/: mod.rs  server.rs
